2001-04-02  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/symbols.c:  Added some tests.

2001-03-19  Gary Houston  <ghouston@arglist.com>

	* tests/r4rs.test: use test-file-name to locate r4rs.test,
	not data-file-name.

	* guile-test: define tmp-dir, the location where r4rs.test will
	create it's temporary files.
	(data-file-name): use tmp-dir.  this must be under build-dir,
	not src-dir.

2001-03-18  Gary Houston  <ghouston@arglist.com>

	* guile-test: use #!/bogus-path/..., not #!/home/dirk/... in the
	first line.
	
2001-03-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test:  Added a test for let* bindings and
	re-arranged and slightly improved the existing one.

2001-03-09  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* tests/syntax.test ("let*"): Changed the `duplicate bindings'
	test, dups are allowed in `let*' and are now expected to pass.

2001-03-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* lib.scm (run-test-exception):  Preserve the original error's
	stack for re-throwing.

2001-03-04  Marius Vollmer  <mvo@zagadka.ping.de>

	* tests/syntax.test ("let,duplicate bindings", "let*,duplicate
	bindings", "letrec,duplicate bindings"): Expect to pass, bug has
	been fixed.

2001-03-03  Marius Vollmer  <mvo@zagadka.ping.de>

	* tests/syntax.test ("duplicate formals"): New category, move
	appropriate tests here.  Expect them to pass.
	("empty parentheses"): Expect to pass, bug has been fixed.
	
	* tests/alist.test: Use "'()" instead of "()" in all places
	where the empty list is meant.

2001-03-01  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* lib.scm (exception:unbound-var, exception:wrong-num-args):  New
	exported constants.

	* tests/r4rs.test:  Make sure that no bindings for x and y exist
	after the file is loaded.

	* tests/syntax.test:  New file.

	* tests/exceptions.test, tests/syntax.test, tests/eval.test:
	Moved the test cases that are related to guile's syntactic forms
	from tests/exceptions.test to tests/syntax.test.  Moved tests